<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pref_echo_canceller_calibration_key">pref_echo_canceller_calibration_key</string>
    <string name="pref_echo_canceller_calibration">Echo calibration</string>
    <string name="pref_video_use_front_camera_title">Use front camera</string>
    <string name="pref_video_use_front_camera_key">pref_video_use_front_camera_key</string>
	<string name="pref_video">Video</string>
	<string name="pref_preferences">Preferences</string>
    <string name="pref_video_codec_h263_title">H263</string>
    <string name="pref_video_codec_h263_key">pref_video_codec_h263_key</string>
    <string name="pref_video_codec_mpeg4_title">MPEG4</string>
    <string name="pref_video_codec_mpeg4_key">pref_video_codec_mpeg4_key</string>
    <string name="pref_video_codec_h264_title">H264</string>
    <string name="pref_video_codec_h264_key">pref_video_codec_h264_key</string>
    <string name="pref_video_codecs_title">Codecs</string>
    <string name="pref_video_codecs_key">pref_video_codecs_key</string>
	<string name="menu_videocall_back_to_dialer_title">Display dialer</string>
	<string name="menu_videocall_switch_camera_title">Front/Rear Camera</string>
	<string name="menu_videocall_change_resolution_when_low_resolution">Try High resolution</string>
	<string name="menu_videocall_change_resolution_when_high_resolution">Low resolution</string>
	<string name="menu_videocall_change_resolution_title">Change resolution</string>
    <string name="menu_videocall_toggle_camera_title">Mute/Unmute camera</string>
	<string name="menu_videocall_toggle_camera_disable">Disable camera</string>
	<string name="menu_videocall_toggle_camera_enable">Enable camera</string>
	<string name="menu_videocall_terminate_call_title">Terminate call</string>
    <string name="pref_video_settings_title">Video settings</string>
    <string name="pref_video_automatically_share_my_video_key">pref_video_automatically_share_my_video_key</string>
    <string name="pref_video_automatically_share_my_video_title">Share my camera</string>
    <string name="pref_video_automatically_share_my_video">Automatically send my camera on incoming calls</string>
    <string name="pref_video_initiate_call_with_video_key">pref_video_initiate_call_with_video_key</string>
    <string name="pref_video_initiate_call_with_video_title">Initiate video calls</string>
    <string name="pref_video_initiate_call_with_video">Always send my camera on outgoing calls</string>
    <string name="pref_video_enable_key">pref_video_enable_key</string>
    <string name="pref_video_enable_title">Enable Video</string>
    <string name="pref_escape_plus">Replace + by 00</string>
    <string name="pref_escape_plus_key">pref_escape_plus_key</string>
    <string name="pref_ilbc_summary">iLBC might be unavailable depending on ARM processor and Android OS version.</string>
    <string name="pref_echo_cancellation">Echo cancellation</string>
    <string name="pref_echo_cancellation_key">pref_echo_cancellation_key</string>
    <string name="pref_handle_outcall_summarry">Configure how cellular calls are redirected to voip when possible</string>
    <string name="pref_handle_outcall">Redirect cellular calls</string>
    <string name="pref_handle_outcall_key">pref_handle_outcall_key_v2</string>
    <string name="pref_autostart">Start at boot time</string>
    <string name="pref_autostart_key">pref_autostart_key</string>
    <string name="outcall_chooser_cellular">Cellular</string>
    <string name="outcall_chooser_text">Choose application to call %s</string>
    <string name="pref_enable_outbound_proxy">Outbound proxy</string>
    <string name="pref_enable_outbound_proxy_key">Outbound proxy</string>
    <string name="pref_codec_pcma">pcma</string>
    <string name="pref_codec_pcma_key">pref_codec_pcma_key</string>
    <string name="pref_codec_pcmu">pcmu</string>
    <string name="pref_codec_pcmu_key">pref_codec_pcmu_key</string>
    <string name="pref_codec_gsm">gsm</string>
    <string name="pref_codec_gsm_key">pref_codec_gsm_key</string>
    <string name="pref_codec_ilbc">ilbc</string>
    <string name="pref_codec_ilbc_key">pref_codec_ilbc_key</string>
    <string name="pref_codec_speex8">speex 8 Khz</string>
    <string name="pref_codec_speex8_key">pref_codec_speex8_key</string>
    <string name="pref_codec_speex16">speex 16 Khz</string>
    <string name="pref_codec_speex16_key">pref_codec_speex16_key</string>
    <string name="pref_codec_speex32_key">pref_codec_speex32_key</string>
    <string name="pref_codecs">Codecs</string>
    <string name="pref_codecs_key">pref_codecs_key</string>
    <string name="place_call_chooser">Place a call</string>
<string name="pref_debug">Debug</string>
<string name="about_text">Linphone  %s SIP (rfc 3261) compatible phone under GNU Public License V2\n http://www.linphone.org\n\nInstructions\nhttp://www.linphone.org/m/help\n\n© 2011 Belledonne Communications</string>
<string name="menu_about">About</string>
<string name="pref_audio">Audio</string>
<string name="menu_exit">Exit</string>
<string name="pref_prefix">Prefix</string>
<string name="pref_advanced">Advanced</string>
<string name="menu_settings">Settings</string>
<string name="pref_proxy">Proxy</string>
<string name="pref_domain">Domain*</string>
<string name="pref_passwd">Password*</string>
<string name="pref_username">Username*</string>
<string name="hello">Hello World, Linphone!</string>
<string name="app_name">ZhiZhi</string>
<string name="pref_sipaccount">SIP Account</string>
<string name="wrong_username">wrong user name</string>
<string name="wrong_passwd">wrong password</string>
<string name="wrong_domain">Wrong domain</string>
<string name="wrong_settings">Wrong settings</string>
<string name="tab_dialer">Dialer</string>
<string name="tab_contact">Contact</string>
<string name="call_error">Cannot call %s</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="dismiss">Dismiss</string>
<string name="cont">Continue</string>
<string name="never_remind">Never remind me</string>
<string name="config_error">%s, do you want to go to the settings page ?</string>
<string name="initial_config_error">&lt;P ALIGN=CENTER&gt;No SIP account has been configured yet, do you want to go to the settings page ?&lt;br/&gt;&lt;br/&gt; Need help ?&lt;br/&gt; &quot;http://www.linphone.org/m/help&quot;&lt;/p&gt;</string>
<string name="first_launch_message">&lt;P ALIGN=CENTER&gt;Welcome to Linphone SIP phone&lt;br/&gt;&lt;br/&gt; If you are new to SIP, have a look at&lt;br/&gt; &quot;http://www.linphone.org/m/help&quot;&lt;/p&gt; </string>
<string name="ec_calibration_launch_message">Starting echo cancelation audio calibration </string>
<string name="warning_already_incall">Cannot initiate a new call because a call is already engaged</string>
<string name="tab_history">History</string>
<string name="warning_wrong_destination_address">Cannot build destination address from [%s]</string>
<string name="menu_clear_history">Clear</string>
<string name="error_cannot_get_call_parameters">Cannot get call parameters</string>
<string name="error_cannot_create_default_parameters">Cannot create default call parameters</string>
<string name="error_cannot_invite_address">Cannot invite destination address  [%s]</string>
<string name="notification_registered">registered to %s </string> 
<string name="notification_register_failure">fails to register to %s</string>
<string name="notification_started">started</string>
<string name="pref_echo_cancellation_summary">Removes the echo heard by other end</string>
<string name="pref_stun_server">Stun server</string>
<string name="pref_stun_server_key">pref_stun_server_key</string>
<string name="ec_calibrating">Calibrating...</string>
<string name="ec_calibrated">Calibrated [%s ms]</string>
<string name="failed">failed</string>

<string-array name="pref_handle_outcall_values">
<item>Off</item>
<item>On demand</item>
<item>Always</item>
</string-array>
</resources>
